# honest-tax

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/gideon-tax-core/: Cargo.toml
crates/gideon-tax-core/src/: lib.rs  spine.rs  usd_amount.rs
crates/gideon-tax-core/src/rules/: mod.rs  y2025.rs
crates/gideon-tax-core/src/types/: filer.rs  mod.rs  schedule1.rs  usd.rs
crates/gideon-tax-form/: Cargo.toml  README.md
crates/gideon-tax-form/schemas/2025/federal/return/: 1040.toml  8812.toml  schedule-1-a.toml  schedule-1.toml  schedule-2.toml  schedule-3.toml  schedule-a.toml  schedule-b.toml  schedule-c.toml  schedule-d.toml  schedule-e.toml  schedule-eic.toml  schedule-f.toml  schedule-h.toml  schedule-j.toml  schedule-r.toml  schedule-se.toml
crates/gideon-tax-form/schemas/2025/federal/source/: 1098-c.toml  1098-e.toml  1098-t.toml  1098.toml  1099-b.toml  1099-c.toml  1099-div.toml  1099-g.toml  1099-int.toml  1099-k.toml  1099-ltc.toml  1099-misc.toml  1099-nec.toml  1099-oid.toml  1099-patr.toml  1099-q.toml  1099-r.toml  1099-s.toml  1099-sa.toml  w-2.toml
crates/gideon-tax-form/src/: lib.rs
crates/gideon-tax-form/src/y2025/: federal.rs  mod.rs
crates/gideon-tax-form/src/y2025/federal/: mod.rs  w2.rs
crates/honest-tax-core/: Cargo.toml
crates/honest-tax-core/src/: lib.rs
crates/honest-tax-core/src/types/: filing_status.rs
data/2025/: README.md  credits.json  other_parameters.json  standard_deduction.json  tax_brackets.json
forms/2025/: f1040.toml
prompts/: starter.md
