[package]
name = "honest-tax-core"
description = "Deterministic US federal income tax calculator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
