[package]
name = "honest-tax-core"
description = "Deterministic US federal income tax calculator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
my_country = { version = "0.1", default-features = false, features = [
    "us",
    "subdivision_name",
    "subdivision_code",
    "alpha2",
    "alpha3",
    "iso_short_name",
] }
thiserror = "2"
